# kedro-ml-engine-final

./: .gitignore  Dockerfile  README.md  docker-compose.yml  phase5_analysis.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
conf/base/: catalog.yml  data_catalog.yml  logging.yml  parameters.yml  settings.yml
conf/test/: parameters.yml
docs/: API.md  PHASE_1.md  SETUP.md
src/ml_engine/: __init__.py  pipeline_registry.py
src/ml_engine/hooks/: __init__.py
src/ml_engine/pipelines/: __init__.py  data_cleaning.py  data_loading.py  data_validation.py  feature_engineering.py  feature_selection.py  model_training.py  phase4_algorithms.py  report_generator.py  visualization_manager.py
src/ml_engine/utils/: validators.py
tests/: conftest.py  test_data_cleaning.py  test_data_loading.py  test_data_validation.py  test_pipelines.py
