[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-engine"
version = "0.2.1"
description = "World-class ML Engine built with Kedro 1.1.1"
requires-python = ">=3.9"
authors = [{name = "ML Team", email = "ml@example.com"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "kedro>=1.1.1",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "xgboost>=2.0.3",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.13.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
    "isort>=5.13.2",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
]

[tool.kedro]
# Kedro 1.1.1 configuration
package_name = "ml_engine"
project_path = "."
source_dir = "src"
tests_dir = "tests"

[tool.setuptools]
packages = ["ml_engine"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "duplicate-code",
]
fail-under = 8.5

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/ml_engine --cov-report=html --cov-report=term-missing --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/ml_engine"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
min_percentage = 90
